# ChangeLog for dev-python/pytables
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/dev-python/cvs-repo/gentoo-x86/dev-python/pytables/ChangeLog,v 1.32 2010/01/19 16:49:23 bicatali Exp $

  19 Jan 2010; Sébastien Fabbro <bicatali@gentoo.org>
  pytables-2.1.2.ebuild, +files/pytables-2.1.2-no-old-num.patch:
  Now skip tests for numarray and numeric, obsoleted

*pytables-2.1.2 (12 Dec 2009)

  12 Dec 2009; Sébastien Fabbro <bicatali@gentoo.org> -pytables-0.8.ebuild,
  -pytables-1.4.ebuild, -pytables-2.1.1.ebuild, +pytables-2.1.2.ebuild,
  +files/pytables-2.1.2-failingtests.patch, metadata.xml:
  Version bump. Disable failing tests due to bad reference HDF5 files
  (reported upstream), thanks Kacper Kowalik. Removed old version, even x86
  stable 0.8 because depending on Numeric/numarray which are buggy and
  obsolete with python > 2.5

  04 Sep 2009; Patrick Lauer <patrick@gentoo.org> -pytables-2.0.2.ebuild,
  -pytables-2.0.3.ebuild, -pytables-2.1.ebuild:
  Remove old

*pytables-2.1.1 (03 Aug 2009)

  03 Aug 2009; Michał Januszewski <spock@gentoo.org>
  +pytables-2.1.1.ebuild:
  Version bump.

  18 Feb 2009; Patrick Lauer <patrick@gentoo.org> pytables-2.1.ebuild:
  Fixing dep, thanks to Matt Summers, fixes #254654

*pytables-2.1 (04 Feb 2009)

  04 Feb 2009; Patrick Lauer <patrick@gentoo.org> +pytables-2.1.ebuild:
  Bump to 2.1, fixes #254654

*pytables-2.0.3 (28 Jun 2008)

  28 Jun 2008; Rob Cakebread <pythonhead@gentoo.org> pytables-2.0.2.ebuild,
  +pytables-2.0.3.ebuild:
  Version bump. Fixed depend on sci-libs/hdf5, dropped ia64 because it
  doesn't have hdf5 keyword

*pytables-2.0.2 (23 Feb 2008)

  23 Feb 2008; Tiziano Müller <dev-zero@gentoo.org> pytables-1.4.ebuild,
  +pytables-2.0.2.ebuild:
  Version bump (bug #196062). Fixed dependency in 1.4 (bug #211106, thanks to
  Chris Kerr). Added tests for both. Note: 1.4 is deprecated and 3 tests fail