@@ -4,13 +4,13 @@ Hash: SHA1
 AUX pytables-2.1.2-failingtests.patch 2384 RMD160 7788a07672356a781f20459c16fb3fa30216da91 SHA1 cff5b892d31f688207e9be0a93c683632b1afee9 SHA256 a20542e12cb42da9f352e2eddb6a9784d81b04ec11efe66e88c602cfde3383a6
 AUX pytables-2.1.2-no-old-num.patch 1683 RMD160 a458a67404a336d99e5fee832862af621106e77d SHA1 243784ec3da95836be00511130a44fa03c625c23 SHA256 6b795ba01a9988378b46e0c665a1aed110204c242d5f2a4e6005978819ebab74
 DIST tables-2.1.2.tar.gz 4677233 RMD160 09bfb73e9252baa34aa40274a0b07f6c6cc60d70 SHA1 545cc16491d37e2f6b8ce10bc8bdfa559b174e2e SHA256 948d80fb66693bca67863c4a7dc879dae1d6caa4235df0030ca0cc3220cffa39
-EBUILD pytables-2.1.2.ebuild 1166 RMD160 c6b4bd94878b89a1b1532ecc0cd05ac2403f3b80 SHA1 c0bdc7d4e9cd2c849bb1b3d90e7b70abd8704cbb SHA256 5c57be0aa3df2a2759d863c274ff2727f6ad4bf4469b30f635280ab8c92a1992
-MISC ChangeLog 4859 RMD160 594c72616db706c2f119bbea79c50169cea8c62f SHA1 e13db7ddf510a12b62993b3d66ff576d3e01cd2a SHA256 d7619899e71c9e8a018c6fefd1cfaa4040e39fd68cf80670f40cb2a6499f7079
+EBUILD pytables-2.1.2.ebuild 1216 RMD160 0d8e7b50893a453e90c2d13dc3cf4c6104660a07 SHA1 c14f3a3b26b4ee99b360d75068ef2d53693179d5 SHA256 b098cc20099230803c033e94d87660515135de407ab87f1d15f32bcf1e12c4a8
+MISC ChangeLog 5034 RMD160 9bdd670a7dd5c6b1796b48269dd70e2cb498e49d SHA1 cc5a1c6eedab4b81d5773a74f02489dd40faaa44 SHA256 91aa442d23695697c5c508eccfd9aec8d97a7996802da6e67239db1328983fad
 MISC metadata.xml 612 RMD160 9d22d68fdb45ac4657d3eb763efa57768bf14264 SHA1 ea8e47129d3287e27ec0db1443527af7591470c2 SHA256 52c64e805b50f2888f7b68eb3a1ead40f0246d629a4a17b11507d8008d5351c5
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.14 (GNU/Linux)
 
-iEYEARECAAYFAktV6wkACgkQ1ycZbhPLE2DvowCglsfya8MFcEuQETOUo3nosCUh
-H7gAnjlSmjavrrlliAg/kkHaF2FEqbyy
-=w2sy
+iEYEARECAAYFAktnPC4ACgkQ1ycZbhPLE2CEKACbBKNiAmTtNyOptpBJvhyDhtx7
+fIMAnilpfnNKi8GJplh9xVVlE1M6JUqy
+=9KUz
 -----END PGP SIGNATURE-----
