@@ -1,6 +1,6 @@
 # Copyright 1999-2010 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-python/cvs-repo/gentoo-x86/dev-python/pytables/Attic/pytables-2.1.2.ebuild,v 1.2 2010/01/19 16:49:23 bicatali Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-python/cvs-repo/gentoo-x86/dev-python/pytables/Attic/pytables-2.1.2.ebuild,v 1.3 2010/02/01 20:40:05 bicatali Exp $
 
 EAPI=2
 inherit eutils distutils
@@ -13,9 +13,9 @@ HOMEPAGE="http://www.pytables.org/"
 SLOT="0"
 KEYWORDS="~amd64 ~ppc ~x86"
 LICENSE="BSD"
-IUSE="doc examples"
+IUSE="doc examples mpi"
 
-DEPEND="sci-libs/hdf5
+DEPEND="sci-libs/hdf5[mpi=]
 	dev-python/numpy
 	dev-libs/lzo:2
 	app-arch/bzip2"
@@ -28,6 +28,9 @@ DOCS="ANNOUNCE.txt MIGRATING_TO_2.x.txt RELEASE_NOTES.txt THANKS"
 src_prepare() {
 	epatch "${FILESDIR}"/${P}-failingtests.patch
 	epatch "${FILESDIR}"/${P}-no-old-num.patch
+	if use mpi; then
+		export CC=mpicc
+	fi
 }
 
 src_test() {
